get the profile

--- a/config/s16a2DConfig.ini
+++ b/config/s16a2DConfig.ini
@@ -3,9 +3,9 @@ omega_m = 0.3
 h = 0.70
 
 [survey]
-center_ra = 336.056326967
-center_dec = 0.681605277005
-size = 12.7510968958
+center_ra = 336.056328634
+center_dec = 0.681606943672
+size = 12.766666666666666
 units = degree
 hdu = 1
 flip_e2 = true
@@ -19,8 +19,8 @@ zsig_max = 0.
 
 [field]
 units = degree
-pixel_size = 0.01667
-npix = 764
+pixel_size = 0.016666666666666666
+npix = 766
 nlp = 1
 zlens = -1
 include_flexion = false
@@ -31,5 +31,5 @@ niter = 500
 nreweights = 5
 niter_debias = 0
 nscales = 7
-lambda = 4
+lambda = 4.0
 
