preparing code to do 3D delta reconstruction

--- a/config/s16a3DConfig.ini
+++ b/config/s16a3DConfig.ini
@@ -14,16 +14,14 @@ dec = dec
 z = mlz_photoz_best
 e1 = g1
 e2 = g2
-zsig_min = mlz_photoz_std_best
-zsig_max = mlz_photoz_std_best 
 
 [field]
 units = degree
 pixel_size = 0.016666666666666666
 npix = 766
-nlp=2
-zlp_min=0.01
-zlp_max=0.61
+nlp=32
+zlp_min=0.0
+zlp_max=1.0
 r_cond=0.1
 include_flexion = false
 
@@ -32,8 +30,8 @@ nrandom = 100
 niter = 1000
 nreweights = 0
 niter_debias = 0
-nscales = 7
+nscales = 5
 lambda = 3.5
-battle_lemarie_reg=.1
-last_scale_reg=.1
+battle_lemarie_reg=1
+last_scale_reg=1
 #positivity=true
