prepare for test_sparse

--- a/tests/test_halosim.ini
+++ b/tests/test_halosim.ini
@@ -12,11 +12,11 @@ ny      =   1280
 xmin    =   -12.81
 ymin    =   -12.81
 
-[lensZ]
+[lens]
 zlmin   =   0.04
 zlscale =   0.045
 nlp     =   10
 
-[sourceZ]
+[sources]
 nz      =   10
 zbound  =   [0.05,0.36,0.47,0.56,0.69,0.80,0.91,1.03,1.22,1.50,2.50]
