--- a/tests/test_pixel_trans.ini
+++ b/tests/test_pixel_trans.ini
@@ -12,13 +12,13 @@ ny      =   50
 xmin    =   -10.2
 ymin    =   -10.2
 
-[lensZ]
+[lens]
 zlmin   =   0.04
 zlscale =   0.045
 nlp     =   10
 rs_base =   0.12
 resolve_lim=0.4
 
-[sourceZ]
+[sources]
 nz      =   1
 zbound  =   [0.00,5.00]
