--- a/tests/test_pixel_los.ini
+++ b/tests/test_pixel_los.ini
@@ -12,11 +12,11 @@ ny      =   50
 xmin    =   -10.2
 ymin    =   -10.2
 
-[lensZ]
+[lens]
 zlmin   =   0.02
 zlscale =   0.02
 nlp     =   20
 
-[sourceZ]
+[sources]
 nz      =   10
 zbound  =   [0.06,0.36,0.46,0.56,0.70,0.80,0.90,1.02,1.22,1.50,2.50]
